✏️ Renamed project, updated Readme and updated dependancies

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -48,7 +48,7 @@ jobs:
     needs: checkAndBuild
     env:
       DOCKER_REGISTRY_HOST: docker-registry.pandore.ovh
-      IMAGE_NAME: mc-interface
+      IMAGE_NAME: game-servers-interface
 
     steps:
       - name: Checkout repository
