--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,8 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
-    "source.fixAll": true
+    "source.fixAll": "explicit"
   },
   "typescript.tsdk": "node_modules\\typescript\\lib",
-  "cSpell.words": [
-    "Minecraft"
-  ]
+  "cSpell.words": ["Minecraft"]
 }
